revise customer to custable
