# internal/01_entity/custable.go
@@ -3,11 +3,11 @@ package entity
 
 import "time"
 
-type Customer struct {
+type Custable struct {
 	BillerID        string    `json:"biller_id"`
 	AccountNum      string    `json:"account_num"`
 	CompanyBank     string    `json:"company_bank"`
 	Name            string    `json:"name"`
 	CustomerStatus  int       `json:"customer_status"`
-	ModifiedDateTime time.Time `json:"modified_datetime"`
+	CreatedDateTime time.Time `json:"created_datetime"`
 }
