# internal/04_api/v1/handler/custable.go
@@ -8,12 +8,12 @@ import (
 )
 
 // ให้ struct CustomerHandler รับ CustomerRepository (หรือ Service) จาก application
-type CustomerHandler struct {
-	service application.CustomerService
+type CustableHandler struct {
+	service application.CustableService
 }
 
-func NewCustomerHandler(service application.CustomerService) *CustomerHandler {
-	return &CustomerHandler{service: service}
+func NewCustableHandler(service application.CustableService) *CustableHandler {
+	return &CustableHandler{service: service}
 }
 
 // GetRecentActiveCustomers godoc
@@ -22,10 +22,10 @@ func NewCustomerHandler(service application.CustomerService) *CustomerHandler {
 // @Tags         v1-GET
 // @Accept       json
 // @Produce      json
-// @Success      200  {array}  entity.Customer
+// @Success      200  {array}  entity.Custable
 // @Failure      500  {object}  map[string]string
-// @Router       /api/v1/customers [get]
-func (h *CustomerHandler) GetRecentActiveCustomers(c *gin.Context) {
+// @Router       /api/v1/custable [get]
+func (h *CustableHandler) GetRecentActiveCustomers(c *gin.Context) {
 	customers, err := h.service.GetRecentActiveCustomers(c.Request.Context())
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
